feat: basic demo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "jsx": "react",
     "declaration": true,
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["demo", "node_modules"]
 }
