--- a/demo/package.json
+++ b/demo/package.json
@@ -11,7 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@measured/puck": "^0.15.0",
+    "@mui/material": "^5.16.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
