--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -14,6 +14,9 @@ jobs:
       pages: write
       id-token: write
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: demo
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
