--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@measured/puck": "^0.15.0",
-    "@mui/material": "^5.16.7"
+    "@mui/material": "^5.0.0||^6.0.0"
   },
   "devDependencies": {
-    "prettier": "3.3.3",
+    "prettier": "Y3.3.3",
     "typescript": "^5.5.4"
   }
 }
