fix: rename job to demo

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,14 +9,14 @@ on:
       - main
 
 jobs:
-  build:
+  demo:
     permissions:
       pages: write
       id-token: write
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: demo
+        working-directory: ./demo
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
