--- a/demo/package.json
+++ b/demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puck-mui-components-demo",
+  "name": "puck-mui-demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,7 +16,8 @@
     "@measured/puck": "^0.15.0",
     "@mui/material": "^6.0.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "puck-mui": ".."
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
