--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/peoplekit/puck-mui-components.git"
+    "url": "https://github.com/peoplekit/puck-mui"
   },
   "keywords": [
     "Puck",
