--- a/demo/package.json
+++ b/demo/package.json
@@ -17,7 +17,7 @@
     "@mui/material": "^6.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "puck-mui": ".."
+    "puck-mui": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
