--- a/demo/package.json
+++ b/demo/package.json
@@ -15,12 +15,13 @@
     "@emotion/styled": "^11.13.0",
     "@measured/puck": "^0.15.0",
     "@mui/material": "^6.0.2",
+    "puck-mui": "^0.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "puck-mui": "^0.0.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/node": "^22.5.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
